remove neg margin from nav-inner to avoid horz scroll on smaller resolutions, fix desc, move css file to css dir

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,34 @@
       letter-spacing: -1px;
     }
 
-
+    .memberbox{ 
+      margin-top:15px; 
+      margin-bottom:10px;
+    }
+    .memberbox h2{
+      color:#aaa; 
+      font-size:150%; 
+      margin-bottom:0
+    }
+    .carousel-caption .pix-thumb{
+      position:relative; 
+      min-width:45px; 
+      margin-right:5px; 
+      border-radius:6px; 
+      width:45px; 
+      height:45px
+    }
+    .membercheckin{
+      margin-top:20px; 
+      color:#fff
+    }
+    .carousel-caption{
+      margin-top:100px
+    }
+    .tip{
+      display:inline-block; 
+      position:relative
+    }
 
     /* RESPONSIVE CSS
     -------------------------------------------------- */
@@ -208,10 +235,6 @@
 
 
     @media (max-width: 767px) {
-
-      .navbar-inner {
-        margin: -20px;
-      }
 
       .carousel {
         margin-left: -20px;
